--- a/Back_On_Rails/Gemfile
+++ b/Back_On_Rails/Gemfile
@@ -15,6 +15,9 @@ gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'mini_racer', platforms: :ruby
+#
+# Polling gem for windows machines, will not be installed for mac
+gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
