--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
 
-.idea/workspace.xml
-.idea/Back-On-Rails.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/modules/Back_On_Rails.iml
-.idea/vcs.xml
-.idea/inspectionProfiles/Project_Default.xml
+.idea/*
 Back_On_Rails/sqlite3_fix.txt
