--- a/Back_On_Rails/Gemfile
+++ b/Back_On_Rails/Gemfile
@@ -14,6 +14,10 @@ gem 'puma', '~> 3.11'
 # Use SCSS for stylesheets
 gem 'bootstrap-sass', '~> 3.3.7'
 
+#Image upload and storage gems
+gem 'carrierwave',             '1.2.2'
+gem 'mini_magick',             '4.7.0'
+
 # for place Kyle 18.11.12
 # gem 'bootstrap', '~> 4.0.0.alpha3'
 gem 'geocoder'
