--- a/Back_On_Rails/Gemfile
+++ b/Back_On_Rails/Gemfile
@@ -84,3 +84,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'bcrypt'
 
 gem 'notifications'
+
+gem "simple_calendar", "~> 2.0"
