--- a/Back_On_Rails/Gemfile
+++ b/Back_On_Rails/Gemfile
@@ -3,7 +3,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby '2.5.1'
 
-#gem 'twitt#er-bootstrap-rails'
+#gem 'twitter-bootstrap-rails'
 gem 'jquery-rails'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
