--- a/Back_On_Rails/Gemfile
+++ b/Back_On_Rails/Gemfile
@@ -19,6 +19,9 @@ gem 'bootstrap-sass', '~> 3.3.7'
 gem 'carrierwave',             '1.2.2'
 gem 'mini_magick',             '4.7.0'
 
+#pagination
+gem 'will_paginate', '>= 3.1'
+
 # for place Kyle 18.11.12
 # gem 'bootstrap', '~> 4.0.0.alpha3'
 gem 'geocoder'
