--- a/config/database.yml
+++ b/config/database.yml
@@ -5,44 +5,46 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  # adapter: sqlite3
+  # adapter: postgresql
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-# development:
-#   <<: *default
-#   database: db/development.sqlite3
 development:
   <<: *default
-  encoding: unicode
-  database: backonrails_development
-  username: backonrails
-  password: backonrails
-  host: back-on-rails.coeslrinkhee.us-east-1.rds.amazonaws.com
-  port: 5432
+  database: db/development.sqlite3
+# development:
+#   <<: *default
+#   encoding: unicode
+#   database: backonrails_development
+#   username: backonrails
+#   password: backonrails
+#   host: back-on-rails.coeslrinkhee.us-east-1.rds.amazonaws.com
+#   port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
 test:
   <<: *default
-  encoding: unicode
-  database: backonrails_test
-  username: backonrails
-  password: backonrails
-  host: back-on-rails.coeslrinkhee.us-east-1.rds.amazonaws.com
-  port: 5432
+  database: db/test.sqlite3
+# test:
+#   <<: *default
+#   encoding: unicode
+#   database: backonrails_test
+#   username: backonrails
+#   password: backonrails
+#   host: back-on-rails.coeslrinkhee.us-east-1.rds.amazonaws.com
+#   port: 5432
 
 
 # production:
 #   <<: *default
 #   database: db/production.sqlite3
 production:
-  <<: *default
+  adapter: postgresql
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
   encoding: unicode
   database: backonrails
   username: backonrails
