fixed testing error, and added tests for places

--- a/test/fixtures/places.yml
+++ b/test/fixtures/places.yml
@@ -1,15 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  address: MyText
-  latitude: 1.5
-  longitude: 1.5
-  visited_by: MyString
-
-two:
-  title: MyString
-  address: MyText
-  latitude: 1.5
-  longitude: 1.5
-  visited_by: MyString
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
