--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: db/test.sqlite3
 # test:
@@ -54,3 +54,6 @@ production:
   password: backonrails
   host: back-on-rails.coeslrinkhee.us-east-1.rds.amazonaws.com
   port: 5432
+
+cucumber:
+  <<: *test
